--- a/src/app/features/recorder/components/recorder-controls/recorder-controls.component.scss
+++ b/src/app/features/recorder/components/recorder-controls/recorder-controls.component.scss
@@ -1,4 +1,5 @@
 @use 'tokens' as tokens;
+@use 'mixins' as mx;
 
 :host {
   display: inline-flex;
@@ -31,6 +32,10 @@
     border-radius: 50%;
 
     background-color: tokens.$color-bg-surface;
+
+    &:focus-visible {
+      @include mx.focus-ring;
+    }
   }
 
   &__btn-dot {
